--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ nav {
           margin-top: 0.2fr;
           border: 2px solid rgb(23, 23, 85);
           height: 80px;
+          padding-bottom: 80%;
 
       }
 
